--- a/nodes/webapp.json
+++ b/nodes/webapp.json
@@ -1,6 +1,7 @@
 {
   "run_list": [
     "recipe[login_users]",
+    "recipe[yum-epel]",
     "recipe[dstat]",
     "recipe[apache]",
     "recipe[mysql]"
