--- a/nodes/webapp.json
+++ b/nodes/webapp.json
@@ -1,4 +1,9 @@
 {
+  "default_attributes": {
+    "nginx": {
+      "servername" : "webapp"
+      }
+  },
   "run_list": [
     "recipe[login_users]",
     "recipe[yum-epel]",
