--- a/wercker.yml
+++ b/wercker.yml
@@ -39,6 +39,9 @@ build:
         name: Install Vagrant Plugin in vagrant-digitalocean
         code: vagrant plugin install vagrant-digitalocean
     - script:
+        name: Install Vagrant Plugin in dotenv
+        code: vagrant plugin install dotenv
+    - script:
         neme: Download cookbooks
         code: bundle exec berks vendor cookbooks
     - script:
