--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,18 +6,11 @@ provisioner:
   name: chef_solo
 
 platforms:
-  - name: ubuntu-12.04
+  - name: ubuntu-14.04
   - name: centos-6.5
 
 suites:
-  - name: webapp
+  - name: default
     run_list:
-      - recipe[login_users]
-      - recipe[yum-epel]
-      - recipe[apt]
-      - recipe[dstat]
-      - recipe[my-nginx]
-      - recipe[mysql]
+      - role[web]
     attributes:
-     nginx:
-      servername : "webapp"
