--- a/wercker.yml
+++ b/wercker.yml
@@ -47,13 +47,10 @@ build:
         code: bundle exec berks vendor cookbooks
     - script:
         name: Run vagrant up
-        code: VAGRANT_LOG=DEBUG vagrant up --provider=digital_ocean
-#    - script:
-#        name: Run rake spec
-#        code: bundle exec rake spec
-#    - script:
-#        name: Run rake spec:proxy
-#        code: bundle exec rake spec:proxy
+        code: vagrant up --provider=digital_ocean
+    - script:
+        name: Run rake spec
+        code: bundle exec rake spec
   after-steps:
     - script:
         name: Run vagrant destroy
