--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 development:
   adapter: mysql2
   encoding: utf8
-  database: twitter-bootswatch-rails-demo_development
+  database: app_development
   pool: 5
   username: root
   password: password
@@ -24,7 +24,7 @@ development:
 test:
   adapter: mysql2
   encoding: utf8
-  database: twitter-bootswatch-rails-demo_test
+  database: app_test
   pool: 5
   username: root
   password: password
@@ -34,7 +34,7 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: twitter-bootswatch-rails-demo_production
+  database: app_production
   pool: 5
   username: root
   password: password
