fix login_users and deploy script

--- a/wercker.yml
+++ b/wercker.yml
@@ -52,6 +52,12 @@ build:
         name: Run vagrant up
         code: vagrant up --provider=digital_ocean
     - script:
+        name: Create DataBase
+        code: bundle exec cap development db:db_create
+    - script:
+        name: Deploy
+        code: bundle exec cap development deploy
+    - script:
         name: Run rake spec
         code: bundle exec rake spec
   after-steps:
